<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="#F5F5F5">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="#ffffff"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:background="#ffffff"
        android:singleLine="true" 
        android:inputType="text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:background="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:background="#ffffff"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textSize="20sp"  />

     <Button
        android:id="@+id/bt_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/mbutton_background"
        android:text="@string/sign_in"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_back2_first"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/mbutton_background"
        android:text="@string/back"
        android:textSize="20sp" />

</LinearLayout>
